[package]
name = "internet_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bincode = "1.3.3"
serde = { version = "1.0.198", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.37.0", default-features = false, features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
uuid = { version = "1.8.0", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
